# mini-c-compiler

./: .gitignore  LICENSE  Makefile  README  README.md  c.py  clex.py  cparse.py  cvisitors.py  cx86.py  lex.py  parser.out  parsetab.py  setup.cfg  yacc.py
samples/: foo.ast  foo.c  foo.s  foo_lib.ast  foo_lib.c  foo_lib.s
src/: c.py  clex.py  cparse.py  cvisitors.py  cx86.py  yacc.py
