[options]
python_requires = >=3.7

[tool.isort]
single_line_exclusions = ["os", "json"]

[bdist_wheel]
universal = 1


[aliases]
# Define setup.py command aliases here

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true


[flake8]
ignore =
    E121,
    E126,
    E127,
    E128,
    E203,
    E225,
    E226,
    E231,
    E241,
    E251,
    E261,
    E265,
    E302,
    E303,
    E305,
    E402,
    E501,
    E741,
    W291,
    W292,
    W293,
    W391,
    W503,
    W504,
    F403,
    B007,
    F401, # ignore unused imports for now and fix the real issues
    B950,
    W605, # regex related warnings
    N806, # variable naming in django inside function might not be lowercase, since we can also use class name import
    N802,
    N803,
    N816,

exclude = docs
max-line-length = 200
